--- a/tasks/logrotate.yml
+++ b/tasks/logrotate.yml
@@ -6,4 +6,4 @@
     owner: root
     group: root
     mode: '0644'
-  notify: Restart cron service
+#  notify: Restart cron service # TODO this isn't needed?
