--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -7,6 +7,7 @@
     packages:
       - zstd
       - "cron{% if ansible_os_family == 'RedHat' %}ie{% endif %}"
+      - logrotate
 
 - name: Enable cron daemon
   systemd:
